[package]
name = "capslockx"
version = "0.1.0"
edition = "2021"
description = "CapsLockX – keyboard enhancer, Rust core"
license = "GPL-3.0"

[[bin]]
name = "capslockx"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Performance",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
] }
once_cell = "1.19"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
