[package]
name = "capslockx-core"
version = "2.0.0"
edition = "2021"
description = "CapsLockX core logic – platform-agnostic key engine and physics"
license = "GPL-3.0"

[lib]
name = "capslockx_core"
path = "src/lib.rs"

[dependencies]
once_cell    = "1.19"
parking_lot  = "0.12"
cpal         = "0.15"
ringbuf      = "0.4"
dirs         = "5"
whisper-rs   = { version = "0.13", optional = true }
sherpa-rs    = { version = "0.6", optional = true }
ten-vad-rs   = { version = "0.1", optional = true }
serde_json   = "1"
# JS engine: rquickjs (native, fast) + boa (WASM fallback)
boa_engine   = "0.21"
boa_gc       = "0.21"
woxi         = "0.1"
libc         = "0.2"
aec3         = "0.1"
pitch-detection = "0.3"
mp3lame-encoder = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq         = "2"
msedge-tts   = "0.3"
rquickjs     = { version = "0.11", features = ["bindgen"] }

# web-time provides a wasm32-compatible Instant (via performance.now()).
# On native targets this dep is unused.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[features]
default = []
# Local STT engines (whisper.cpp, sherpa-onnx, ten-vad).
# Disabled by default because whisper-rs 0.13 fails to compile on Windows.
# macOS/Linux builds should opt in: `cargo build --features stt`.
stt = ["dep:whisper-rs", "dep:sherpa-rs", "dep:ten-vad-rs"]
# Cloud LLM features (brainstorm chat, agent, llm_client, cloud_stt). Enabled
# by the "full" CLX build; disabled in the "portable" variant so the binary
# carries no LLM/HTTP surface and Space+B/M are no-ops.
ai = []
