[package]
name = "capslockx-core"
version = "2.0.0"
edition = "2021"
description = "CapsLockX core logic – platform-agnostic key engine and physics"
license = "GPL-3.0"

[lib]
name = "capslockx_core"
path = "src/lib.rs"

[dependencies]
once_cell    = "1.19"
parking_lot  = "0.12"
dirs         = "5"
serde_json   = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal            = "0.15"
whisper-rs      = "0.13"
sherpa-rs       = "0.6"
ten-vad-rs      = "0.1"
# JS engine: rquickjs (native, fast)
boa_engine      = "0.21"
boa_gc          = "0.21"
woxi            = "0.1"
libc            = "0.2"
aec3            = "0.1"
pitch-detection = "0.3"
mp3lame-encoder = "0.2"
ureq            = "2"
msedge-tts      = "0.3"
rquickjs        = { version = "0.11", features = ["bindgen"] }

# web-time provides a wasm32-compatible Instant (via performance.now()).
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"
