[package]
name = "capslockx-linux"
version = "0.1.0"
edition = "2021"
description = "CapsLockX Linux adapter – evdev grab + uinput"
license = "GPL-3.0"

[[bin]]
name = "capslockx"
path = "src/main.rs"

[dependencies]
capslockx-core = { path = "../../core" }
once_cell = "1.19"

# evdev is only needed on Linux; guards the dep so cargo check --workspace
# on Windows CI still compiles this crate (to the stub fn main).
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
