[package]
name = "capslockx-macos"
version = "2.0.0"
edition = "2021"
description = "CapsLockX macOS adapter – CGEventTap hook + CGEventPost output"
license = "GPL-3.0"

[[bin]]
name = "capslockx"
path = "src/main.rs"

[[bin]]
name = "voice-standalone"
path = "src/bin/voice-standalone.rs"

[[bin]]
name = "clx-prompt"
path = "src/bin/clx-prompt.rs"

[[bin]]
name = "clx-agent"
path = "src/bin/clx-agent.rs"

[dependencies]
capslockx-core = { path = "../../core" }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ureq = "2"

[build-dependencies]
cc = "1"

# Core Graphics / Core Foundation are only available on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
foreign-types = "0.5"
